<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="divide">/</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="multiply">*</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="plus">+</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="minus">-</string>
    <string name="all_clear">AC</string>
    <string name="num0">0</string>
    <string name="num_dot">.</string>
    <string name="equal">=</string>
    <string name="txt_solution">0</string>
</resources>